# garmin-rehab

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0fda66f12673_initial.py  6b5a7fffbd46_add_composite_indexes_user_date_on_.py  ec2914074d46_add_sync_jobs_table.py  f6d8bcf495df_add_garmin_device_model_to_users.py
backend/app/: config.py  main.py
backend/app/api/: analysis.py  auth.py  deps.py  garmin.py  medical.py  sessions.py
backend/app/db/: database.py
backend/app/models/: __init__.py  models.py  schemas.py
backend/app/services/: garmin_client.py  sync_service.py
docs/: 01-vision.md  02-architecture.md  03-data-model.md  04-garmin-integration.md  05-ai-engine.md  06-roadmap.md  07-api-reference.md  08-setup-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.js  App.tsx  index.css
frontend/src/components/: Card.tsx  Navbar.tsx
frontend/src/lib/: api.js  api.ts  auth.js  auth.tsx
frontend/src/pages/: Dashboard.js  Dashboard.tsx  Login.js  Login.tsx  MedicalProfile.js  MedicalProfile.tsx  Progress.js  Progress.tsx  Sessions.js  Sessions.tsx
frontend/src/pages/Dashboard/: index.tsx  utils.ts
frontend/src/pages/Login/: index.tsx
frontend/src/types/: index.ts
plans/: fase-1-mvp-dashboard-garmin.md  optimizar-backfill-garmin.md  optimizar-endpoints-metrics-activities.md
(+15 files in other folders)
